jasper 2 for osx-arm64

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -444,8 +444,8 @@ isl:
   - '0.22'
 jasper:
   # the first windows build of jasper was 2.0.14
-  - 1  # [not win]
-  - 2  # [win]
+  - 1  # [not (win or arm64)]
+  - 2  # [win or arm64]
 jpeg:
   - 9
 libjpeg_turbo:
