--- a/recipe/migrations/python39.yaml
+++ b/recipe/migrations/python39.yaml
@@ -10,6 +10,7 @@ __migrator:
             - 3.8.* *_cpython
             - 3.9.* *_cpython   # new entry
             - 3.6.* *_73_pypy
+            - 3.7.* *_73_pypy
     paused: false
     longterm: True
     pr_limit: 50
