--- a/recipe/migrations/pypy37.yaml
+++ b/recipe/migrations/pypy37.yaml
@@ -11,7 +11,7 @@ __migrator:
             - 3.9.* *_cpython
             - 3.6.* *_73_pypy
             - 3.7.* *_73_pypy  # new entry
-    paused: False
+    paused: True
     longterm: True
     pr_limit: 10
     bump_number: 0
