zip fortran with c/cxx compilers

--- a/recipe/migrations/cuda110.yaml
+++ b/recipe/migrations/cuda110.yaml
@@ -17,6 +17,10 @@ __migrator:
       - 9
       - 8
       - 7
+    fortran_compiler_version:
+      - 9
+      - 8
+      - 7
 
 cuda_compiler_version:
   - None
@@ -30,6 +34,9 @@ c_compiler_version:     # [linux]
   - 7                   # [linux64 or aarch64]
   - 8                   # [ppc64le]
 cxx_compiler_version:   # [linux]
+  - 7                   # [linux64 or aarch64]
+  - 8                   # [ppc64le]
+fortran_compiler_version:  # [linux]
   - 7                   # [linux64 or aarch64]
   - 8                   # [ppc64le]
 
