--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -420,8 +420,8 @@ google_cloud_cpp_common:
 googleapis_cpp:
   - '0.10'
 graphviz:
-  - 2.38  # [win]
-  - 2.40  # [not win]
+  - 2.40  # [linux or (osx and x86_64)]
+  - 2.46  # [win or (osx and arm64)]
 grpc_cpp:
   - '1.36'
 harfbuzz:
