--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -82,6 +82,9 @@ target_gobin:
 # Rust Compiler Options
 rust_compiler:
   - rust
+# Pin rust to <1.49 on osx-64 due to min deployment target req, cf. https://github.com/conda-forge/rust-feedstock/issues/73
+rust_compiler_version:  # [osx and x86_64]
+  - 1.48                # [osx and x86_64]
 
 macos_machine:                 # [osx]
   - x86_64-apple-darwin13.4.0  # [osx and x86_64]
