--- a/recipe/migrations/gdal32.yaml
+++ b/recipe/migrations/gdal32.yaml
@@ -1,7 +1,9 @@
 __migrator:
   build_number: 1
   kind: version
-  migration_number: 1
+  migration_number: 2
 gdal:
 - '3.2'
-migrator_ts: 1604390922.414637
+libgdal:
+- '3.2'
+migrator_ts: 1614669979
