--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -496,6 +496,8 @@ libssh2:
   - 1
 libsvm:
   - 3.21
+libthrift:
+  - '0.14.1'
 libtiff:
   - 4
 libunwind:
@@ -653,6 +655,8 @@ tbb:
   - 2020
 tbb_devel:
   - 2020
+thrift_cpp:
+  - '0.14.1'
 tk:
   - 8.6                # [not ppc64le]
 tiledb:
