--- a/recipe/migrations/pypy.yaml
+++ b/recipe/migrations/pypy.yaml
@@ -1,34 +1,31 @@
 migrator_ts: 1580746218   # The timestamp of when the migration was made
 __migrator:
-  kind:
-    version
-  exclude:
-    - c_compiler
-    - vc
-    - cxx_compiler
-  migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
-    1
-  bump_number: 1   # Hashes changed for cpython, so it's better to bump build numbers.
-  # do not use mamba to check if the issued PRs are solvable
-  check_solvable: false
-  longterm: True
-  paused: False
-  pr_limit: 1
+    migration_number: 1
+    operation: key_add
+    primary_key: python
+    ordering:
+        python:
+            - 3.6.* *_cpython
+            - 3.7.* *_cpython
+            - 3.8.* *_cpython
+            - 3.9.* *_cpython
+            - 3.6.* *_73_pypy
+            - 3.7.* *_73_pypy  # new entry
+    paused: False
+    longterm: True
+    check_solvable: false
+    pr_limit: 1
+    bump_number: 0
+    exclude:
+      # this shouldn't attempt to modify the python feedstocks
+      - python
+      - pypy3.6
+      - pypy-meta
 
-python:
-  - 3.6.* *_cpython   # [not (osx and arm64)]
-  - 3.7.* *_cpython   # [not (osx and arm64)]
-  - 3.8.* *_cpython
-  - 3.6.* *_73_pypy   # [not (win64 or (osx and arm64))]
-
-numpy:
-  - 1.17       # [not (osx and arm64)]
-  - 1.17       # [not (osx and arm64)]
-  - 1.17
-  - 1.18       # [not (win64 or (osx and arm64))]
-
-python_impl:
-  - cpython    # [not (osx and arm64)]
-  - cpython    # [not (osx and arm64)]
-  - cpython
-  - pypy       # [not (win64 or (osx and arm64))]
+python:                # [not (win or arm64)]
+  - 3.6.* *_73_pypy    # [not (win or arm64)]
+# additional entries to add for zip_keys
+numpy:                 # [not (win or arm64)]
+  - 1.18               # [not (win or arm64)]
+python_impl:           # [not (win or arm64)]
+  - pypy               # [not (win or arm64)]
