--- a/recipe/migrations/boost1760.yaml
+++ b/recipe/migrations/boost1760.yaml
@@ -2,6 +2,14 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  longterm: True
 boost:
 - 1.76.0
+- 1.74.0
+boost_cpp:
+- 1.76.0
+- 1.74.0
+zip_keys:
+ - - boost_cpp
+   - boost
 migrator_ts: 1620081031.223547
