--- a/recipe/migrations/s2n109.yaml
+++ b/recipe/migrations/s2n109.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1622216070.8775978
 s2n:
 - 1.0.9
