--- a/recipe/migrations/perl5321.yaml
+++ b/recipe/migrations/perl5321.yaml
@@ -2,6 +2,6 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
-migrator_ts: 1605055583.7718806
+migrator_ts: 1623045850.132499
 perl:
-- 5.32.0
+- 5.32.1
