--- a/recipe/migrations/pypy37-windows.yaml
+++ b/recipe/migrations/pypy37-windows.yaml
@@ -11,7 +11,7 @@ __migrator:
             - 3.9.* *_cpython
             - 3.6.* *_73_pypy
             - 3.7.* *_73_pypy  # new entry
-    paused: True
+    paused: False
     longterm: True
     pr_limit: 6
     bump_number: 0
