add max_pin for pytorch since it cannot be rebuilt easily

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -276,6 +276,8 @@ pin_run_as_build:
     max_pin: x.x.x
   poppler:
     max_pin: x.x
+  pytorch:
+    max_pin: x.x.x
   qt:
     max_pin: x.x
   qtkeychain:
