add it to -cpu and -gpu too

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -278,6 +278,10 @@ pin_run_as_build:
     max_pin: x.x
   pytorch:
     max_pin: x.x.x
+  pytorch-cpu:
+    max_pin: x.x.x
+  pytorch-gpu:
+    max_pin: x.x.x
   qt:
     max_pin: x.x
   qtkeychain:
