--- a/recipe/migrations/s2n1012.yaml
+++ b/recipe/migrations/s2n1012.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1625651406.0213056
 s2n:
 - 1.0.12
