unpause win-pypy migration

--- a/recipe/migrations/pypy37-windows.yaml
+++ b/recipe/migrations/pypy37-windows.yaml
@@ -1,6 +1,6 @@
 migrator_ts: 1623865877
 __migrator:
-    paused: True
+    paused: False
     migration_number: 1
     operation: key_add
     primary_key: python
