--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -22,7 +22,7 @@ llvm_openmp:                   # [osx]
   - 11                         # [osx]
 fortran_compiler:              # [unix or win64]
   - gfortran                   # [linux64 or (osx and x86_64)]
-  - gfortran                   # [aarch64 or ppc64le or armv7l]
+  - gfortran                   # [aarch64 or ppc64le or armv7l or s390x]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
   - 11                         # [osx and arm64]
@@ -103,10 +103,11 @@ VERBOSE_CM:
 
 # dual build configuration
 channel_sources:
-  - conda-forge,defaults                        # [not (aarch64 or armv7l or (osx and arm64))]
+  - conda-forge,defaults                        # [not (aarch64 or armv7l or (osx and arm64) or s390x)]
   - conda-forge/label/rust_dev,conda-forge      # [osx and arm64]
   - conda-forge                                 # [aarch64]
   - conda-forge,c4armv7l,defaults               # [armv7l]
+  - https://conda-web.anaconda.org/conda-forge  # [s390x]
 
 channel_targets:
   - conda-forge main
@@ -117,6 +118,7 @@ cdt_name:  # [linux]
   - cos7   # [linux and aarch64]
   - cos7   # [linux and ppc64le]
   - cos7   # [linux and armv7l]
+  - cos7   # [linux and s390x]
 
   - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
   - cos7   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
