ENH ignore pyqt for matplotlib in pypy37 windows

--- a/recipe/migrations/pypy37-windows.yaml
+++ b/recipe/migrations/pypy37-windows.yaml
@@ -23,6 +23,9 @@ __migrator:
       - python
       - pypy3.6
       - pypy-meta
+    ignored_deps_per_node:
+      matplotlib:
+        - pyqt
 
 python:                # [win]
   - 3.7.* *_73_pypy    # [win]
