--- a/recipe/migrations/libthrift0150.yaml
+++ b/recipe/migrations/libthrift0150.yaml
@@ -2,6 +2,8 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+thrift_cpp:
+- 0.15.0
 libthrift:
 - 0.15.0
 migrator_ts: 1631491093.6389954
