remove nodejs 12 and 14 for osx arm64

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -566,8 +566,8 @@ nettle:
   - '3.7'
 nodejs:
  - 16
- - 14
- - 12
+ - 14  # [not (osx and arm64)]
+ - 12  # [not (osx and arm64)]
 nss:
   - 3
 nspr:
