--- a/recipe/migrations/s2n110.yaml
+++ b/recipe/migrations/s2n110.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1632284397.621387
 s2n:
 - 1.1.0
