--- a/recipe/migrations/jasper2.yaml
+++ b/recipe/migrations/jasper2.yaml
@@ -2,6 +2,6 @@ __migrator:
 ￼  build_number: 1
 ￼  kind: version
 ￼  migration_number: 1
-￼jasper:
-￼- '2'
-￼migrator_ts: 1632848255.398075
+jasper:
+- '2'
+migrator_ts: 1632848255.398075
