--- a/recipe/migrations/slepc316.yaml
+++ b/recipe/migrations/slepc316.yaml
@@ -3,5 +3,11 @@ __migrator:
   kind: version
   migration_number: 1
 migrator_ts: 1633404282.180764
+petsc:
+- '3.16'
+petsc4py:
+- '3.16'
 slepc:
+- '3.16'
+slepc4py:
 - '3.16'
