--- a/recipe/migrations/s2n111.yaml
+++ b/recipe/migrations/s2n111.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1633494580.286138
 s2n:
 - 1.1.1
