--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -116,6 +116,8 @@ cdt_name:  # [linux]
 
   - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
   - cos7   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - cos7   # [linux64 and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - cos7   # [linux64 and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
 
 docker_image:                                   # [os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
   - quay.io/condaforge/linux-anvil-comp7        # [os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
@@ -126,6 +128,8 @@ docker_image:                                   # [os.environ.get("BUILD_PLATFOR
 
   - quay.io/condaforge/linux-anvil-cuda:10.2       # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
   - quay.io/condaforge/linux-anvil-cos7-cuda:10.2  # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-ppc64le-cuda:10.2  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64-cuda:10.2  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
 
 zip_keys:
   -                             # [unix]
@@ -136,11 +140,11 @@ zip_keys:
     - python
     - numpy
     - python_impl
-  -                             # [linux64]
-    - cudnn                     # [linux64]
-    - cuda_compiler_version     # [linux64]
-    - cdt_name                  # [linux64]
-    - docker_image              # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  -                             # [linux]
+    - cudnn                     # [linux]
+    - cuda_compiler_version     # [linux]
+    - cdt_name                  # [linux]
+    - docker_image              # [linux and os.environ.get("BUILD_PLATFORM") == "linux-64"]
 
 # aarch64 specifics because conda-build sets many things to centos 6
 # this can probably be removed when conda-build gets updated defaults
