--- a/recipe/migrations/cuda110.yaml
+++ b/recipe/migrations/cuda110.yaml
@@ -31,14 +31,22 @@ __migrator:
       - quay.io/condaforge/linux-anvil-cos7-cuda:10.1    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
       - quay.io/condaforge/linux-anvil-cuda:10.2    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
       - quay.io/condaforge/linux-anvil-cos7-cuda:10.2    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+      - quay.io/condaforge/linux-anvil-ppc64le-cuda:10.2  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+      - quay.io/condaforge/linux-anvil-aarch64-cuda:10.2  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
       - quay.io/condaforge/linux-anvil-cuda:11.0    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+      - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.0  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+      - quay.io/condaforge/linux-anvil-aarch64-cuda:11.0  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
       - quay.io/condaforge/linux-anvil-cuda:11.1    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+      - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.1  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+      - quay.io/condaforge/linux-anvil-aarch64-cuda:11.1  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
       - quay.io/condaforge/linux-anvil-cuda:11.2    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+      - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.2  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+      - quay.io/condaforge/linux-anvil-aarch64-cuda:11.2  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
 
 cuda_compiler_version:
   - None
-  - 10.2                       # [linux64]
-  - 11.0                       # [linux64]
+  - 10.2                       # [linux]
+  - 11.0                       # [linux]
 
 c_compiler_version:     # [linux]
   - 7                   # [linux64 or aarch64]
@@ -49,8 +57,8 @@ cxx_compiler_version:   # [linux]
 
 cudnn:
   - undefined
-  - 7                   # [linux64]
-  - 8                   # [linux64]
+  - 7                   # [linux]
+  - 8                   # [linux]
 
 cdt_name:  # [linux]
   - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
@@ -61,7 +69,8 @@ cdt_name:  # [linux]
 
   - cos6   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
   - cos7   # [linux64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
-  - cos7   # [linux64]
+  - cos7   # [linux and ppc64le]
+  - cos7   # [linux and aarch64]
 
 docker_image:                                   # [os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
   - quay.io/condaforge/linux-anvil-comp7        # [os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
@@ -72,10 +81,14 @@ docker_image:                                   # [os.environ.get("BUILD_PLATFOR
 
   - quay.io/condaforge/linux-anvil-cuda:10.2        # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos6"]
   - quay.io/condaforge/linux-anvil-cos7-cuda:10.2   # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64" and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-ppc64le-cuda:10.2  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64-cuda:10.2  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
   - quay.io/condaforge/linux-anvil-cuda:11.0    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.0  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64-cuda:11.0  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
 
 zip_keys:
-  - - cudnn                      # [linux64]
-    - cuda_compiler_version      # [linux64]
-    - docker_image               # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
-    - cdt_name                   # [linux64]
+  - - cudnn                      # [linux]
+    - cuda_compiler_version      # [linux]
+    - docker_image               # [linux and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - cdt_name                   # [linux]
