--- a/recipe/migrations/cuda111_112.yaml
+++ b/recipe/migrations/cuda111_112.yaml
@@ -12,18 +12,22 @@ __migrator:
   check_solvable: false
   primary_key: cuda_compiler_version
 
-cuda_compiler_version:         # [linux64 or win]
-  - 11.1                       # [linux64 or win]
-  - 11.2                       # [linux64 or win]
+cuda_compiler_version:         # [linux or win]
+  - 11.1                       # [linux or win]
+  - 11.2                       # [linux or win]
 
-cudnn:                  # [linux64 or win]
-  - 8                   # [linux64 or win]
-  - 8                   # [linux64 or win]
+cudnn:                  # [linux or win]
+  - 8                   # [linux or win]
+  - 8                   # [linux or win]
 
 cdt_name:  # [linux]
-  - cos7   # [linux64]
-  - cos7   # [linux64]
+  - cos7   # [linux]
+  - cos7   # [linux]
 
 docker_image:                                   # [os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
   - quay.io/condaforge/linux-anvil-cuda:11.1    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.1  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64-cuda:11.1  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
   - quay.io/condaforge/linux-anvil-cuda:11.2    # [linux64 and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.2  # [linux and ppc64le and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
+  - quay.io/condaforge/linux-anvil-aarch64-cuda:11.2  # [linux and aarch64 and os.environ.get("DEFAULT_LINUX_VERSION", "cos6") == "cos7"]
