--- a/recipe/migrations/s2n112.yaml
+++ b/recipe/migrations/s2n112.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1634715919.8719487
 s2n:
 - 1.1.2
