--- a/recipe/migrations/python310.yaml
+++ b/recipe/migrations/python310.yaml
@@ -9,9 +9,9 @@ __migrator:
             - 3.7.* *_cpython
             - 3.8.* *_cpython
             - 3.9.* *_cpython
-            - 3.10.* *_cpython
+            - 3.10.* *_cpython  # new entry
             - 3.6.* *_73_pypy
-            - 3.7.* *_73_pypy  # new entry
+            - 3.7.* *_73_pypy
     paused: false
     longterm: True
     pr_limit: 5
