add cross-python python_abi

--- a/recipe/migrations/python310.yaml
+++ b/recipe/migrations/python310.yaml
@@ -20,6 +20,8 @@ __migrator:
       - python
       - pypy3.6
       - pypy-meta
+      - cross-python
+      - python_abi
 
 python:
   - 3.10.* *_cpython
