--- a/recipe/migrations/aws_crt_cpp0173.yaml
+++ b/recipe/migrations/aws_crt_cpp0173.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 aws_crt_cpp:
 - 0.17.3
 migrator_ts: 1635812106.0053027
