don't exclude pinned pkgs for python3.10

--- a/recipe/migrations/python310.yaml
+++ b/recipe/migrations/python310.yaml
@@ -22,6 +22,7 @@ __migrator:
       - pypy-meta
       - cross-python
       - python_abi
+    exclude_pinned_pkgs: false
 
 python:
   - 3.10.* *_cpython
