--- a/recipe/migrations/pypy37-windows.yaml
+++ b/recipe/migrations/pypy37-windows.yaml
@@ -13,6 +13,7 @@ __migrator:
             - 3.6.* *_73_pypy
             - 3.7.* *_73_pypy  # new entry
     longterm: True
+    paused: True
     pr_limit: 6
     bump_number: 0
     wait_for_migrators:
