add C/C++ libraries antic & e-antic

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -323,6 +323,8 @@ abseil_cpp:
   - '20210324.2'
 alsa_lib:
   - 1.2.3
+antic:
+  - 0.2.4
 arb:
   - '2.20'
 arpack:
@@ -487,6 +489,8 @@ libcrc32c:
   - 1.1
 libdap4:
   - 3.20.6
+libeantic:
+  - 1.0.3
 libevent:
   - 2.1.10
 libffi:
