--- a/recipe/migrations/s2n130.yaml
+++ b/recipe/migrations/s2n130.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1637118686.661094
 s2n:
 - 1.3.0
