--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -11,10 +11,10 @@ c_compiler:
 c_compiler_version:            # [unix]
   - 11                         # [osx]
   - 9                          # [linux]
-  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
-  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
-  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
-  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
 cxx_compiler:
   - gxx                        # [linux]
   - clangxx                    # [osx]
@@ -22,10 +22,10 @@ cxx_compiler:
 cxx_compiler_version:          # [unix]
   - 11                         # [osx]
   - 9                          # [linux]
-  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
-  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
-  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
-  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux]
+  - 7                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
+  - 9                          # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
 llvm_openmp:                   # [osx]
   - 11                         # [osx]
 fortran_compiler:              # [unix or win64]
