--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -48,8 +48,8 @@ CMAKE_GENERATOR:               # [win]
 
 cuda_compiler:                 # [linux64 or win]
   - nvcc                       # [linux64 or win]
-cuda_compiler_version:         # [linux64 or win]
-  - None                       # [linux64 or win]
+cuda_compiler_version:
+  - None
   - 10.2                       # [linux64 or win]
   - 11.0                       # [linux64 or win]
   - 11.1                       # [linux64 or win]
@@ -152,10 +152,13 @@ zip_keys:
     - c_compiler_version        # [unix]
     - cxx_compiler_version      # [unix]
     - fortran_compiler_version  # [unix]
-    - cudnn                     # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-    - cuda_compiler_version     # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-    - cdt_name                  # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
-    - docker_image              # [linux64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - cudnn                     # [linux and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - cuda_compiler_version     # [linux and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - cdt_name                  # [linux and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - docker_image              # [linux and os.environ.get("CF_CUDA_ENABLED", "False") == "True" and os.environ.get("BUILD_PLATFORM", "").startswith("linux-")]
+  -
+    - cudnn                     # [win64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+    - cuda_compiler_version     # [win64 and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   -
     - python
     - numpy
