--- a/recipe/migrations/s2n131.yaml
+++ b/recipe/migrations/s2n131.yaml
@@ -2,6 +2,7 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  automerge: true
 migrator_ts: 1638377984.068434
 s2n:
 - 1.3.1
